--- a/0-/Features from other Players.mediawiki
+++ b/0-/Features from other Players.mediawiki
@@ -6,6 +6,8 @@ If you like a function some player has, just create a new Headline with the name
 
 - manipulation of the layout, which shouldnt be confused with UI. Foobar allows sorting and displaying all content in every thinkable area of the player by strings. (e.g. defininf a string $artist-$title) will display The Artist-The Track Title. its possibilities seem endless (using it in tag editing dialog or in renaming options) To get an impression how it works have a look at: http://carnager.dyndns.org/~carnager/titleformat_help.html
 
+NOTE: of course such things can be done with present languages, but it should be overkill, because speed matters after all
+
 - replaygain scanning and removing of/from all media files in track and album mode (using tags for all media including mp3)
 
 - a flexible Tag Editor. Basically it should be allowed to add any tag. maybe just a list of empty fields that can
