--- a/0-/Client:xmms2-pidgin.mediawiki
+++ b/0-/Client:xmms2-pidgin.mediawiki
@@ -1,12 +1,16 @@
-{{{xmms2-pidgin}}}
+__NOEDITSECTION__
+===xmms2-pidgin===
+by ''Jitu Das''
 
-by {{{Jitu Das}}}
+'''Homepage''': http://code.google.com/p/xmms2-pidgin/<br />
+'''Latest version''': 0.3<br />
+'''Development language''': C<br />
+'''User Interface''': Pidgin Plugin<br />
+'''Screenshots''': <br />
+[[Talk:Client:xmms2-pidgin | Discuss]]
 
-Homepage: {{{http://code.google.com/p/xmms2-pidgin/}}}
-Latest version: {{{0.3}}}
-Development language: {{{C}}}
-User Interface: {{{Pidgin Plugin}}}
-Screenshots: {{{screenshots}}}
-[[Talk:Client:{{{xmms2-pidgin}}} | Discuss]]
+{{{description}}}
 
-{{{Pidgin plugin to display XMMS2 song info}}}
+[[Clients | More xmms2 clients]]
+
+[[Category:Clients]]
