Levitation import of page 2430 rev 8100.

--- a/0-/Client:xmms2-pidgin.mediawiki
+++ b/0-/Client:xmms2-pidgin.mediawiki
@@ -9,7 +9,7 @@ by ''Jitu Das''
 '''Screenshots''': <br />
 [[Talk:Client:xmms2-pidgin | Discuss]]
 
-{{{description}}}
+Pidgin plugin that displays info for current song playing in XMMS2
 
 [[Clients | More xmms2 clients]]
 
