Levitation import of page 2425 rev 8107.

--- a/0-/Client:AlbumThing.mediawiki
+++ b/0-/Client:AlbumThing.mediawiki
@@ -1,1 +1,1 @@
-{{Client| name=AlbumThing| author=[[Sebastian Sareyko]]| website=http://hg.nooms.de/AlbumThing/| version=Devel| devlanguage=Python| ui=GTK2| screenshots=[http://nooms.de/media/xmms2_album.png] | description=A very simple client that shows a list of available Albums. Selecting one or more Albums fills the playlist with the Albums' songs.}}
+{{Client| name=AlbumThing| author=[[Sebastian Sareyko]]| website=http://hg.nooms.de/AlbumThing/| version=Devel| devlanguage=Python| ui=GTK2| screenshots=[http://nooms.de/media/albumthing.png] | description=A very simple client that shows a list of available Albums. Selecting one or more Albums fills the playlist with the Albums' songs.}}
