--- a/0-/GSoC:2008/Mentor Application.mediawiki
+++ b/0-/GSoC:2008/Mentor Application.mediawiki
@@ -12,7 +12,7 @@
 * URL for your ideas page
 ** http://wiki.xmms2.xmms.se/index.php/Summer_of_Code_2008/Proposed_projects
 * What is the main development mailing list for your organization?
-xmms2-devel@lists.xmms.se
+** xmms2-devel@lists.xmms.se
 * Where is the main IRC channel for your organization?
 ** [irc://chat.freenode.net/xmms2 #xmms2] on freenode.net
 * Does your organization have an application template you would like to see students use? If so, please provide it now. (optional)
