--- a/0-/GSoC:2008/Mentor Application.mediawiki
+++ b/0-/GSoC:2008/Mentor Application.mediawiki
@@ -4,8 +4,11 @@
 * What is your Organization's Homepage?
 ** http://xmms2.xmms.se/
 * Describe your organization.
+** XMMS2 is the spiritual successor to the very successful XMMS project. The creators of XMMS got together in 2002 and spun out the XMMS2 sister project that is now lead by Tobias RundstrÃ¶m and Anders Gustafsson with around 10-15 regular contributors spread over the world (but concentrated in Europe). Our focus has been to separate music playback from the UI in order to provide multiple interfaces and other interesting features. While the code of the music playback engine is starting to mature we have also added features that are expected from modern music players, like a Media library and a powerful way of querying it (Collections).
 * Why is your organization applying to participate in GSoC 2008? What do you hope to gain by participating?
+** First, we hope to be able to reward students in our community by providing them with an occasion to work on XMMS2 as their summer job, rather than beside it. In addition we hope to involve new people and more regular contributors in our project. Our exposure in the program last year also gave our organization great PR that we hope to mimic this year.
 * Did your organization participate in previous GSoC years? If so, please summarize your involvement and the successes and failures of your student projects. (optional)
+** We participated to the GSoC the past two years and we feel that it was very successful. We also learned a lot during the process. The first year we had two very successful projects, two semi-successful ones and one failure. Last year, all projects reached their goals, although the produced code wasn't always in a releasable state. We took a more aggressive approach to student selection the second time, by discussing in depth with all the potential candidates about their interest, their motivation, their experience and their development roadmap. We believe that by asking the students to already provide the broad lines of their project (with milestones) in their proposal, serious candidates are more easily identified. The main issue we had last year was that projects weren't ready to be merged in the mainline, because there wasn't enough time to polish integration. This was a disappointment for both the student and the community. This year, we would like to focus on improving the ongoing quality of the code to ensure that it reaches a mergeable state by the end of the GSoC.
 * If your organization has not previously participated in GSoC, have you applied in the past? If so, for what year(s)? (optional)
 * What license does your project use?
 ** The core of XMMS2 is LGPL and some plugins are GPL because they depend on libraries that are strict GPL. We prefer LGPL where possible.
@@ -21,9 +24,12 @@
 == About Your Mentors ==
 * What criteria did you use to select these individuals as mentors? Please be as specific as possible.
 * Who will your mentors be? Please enter their Google Account address separated by commas. If your organization is accepted we will email each mentor to invite them to take part. (optional)
+** HEY WE NEED TO DECIDE THAT!
 
 == About The Program ==
 * What is your plan for dealing with disappearing students?
 * What is your plan for dealing with disappearing mentors?
+** Knowing the mentors very well, we don't expect this to happen. If anything unexpected were to happen anyway, we would always have one or two backup mentors for each project. Last year, some mentors were on holiday for a few weeks but other mentors were able to step in smoothly.
 * What steps will you take to encourage students to interact with your project's community before, during and after the program?
+** Hanging around on IRC will be a requirement, we will see non-IRCing as desertion. We will show our patented kindness and interest in the students work and persona. When we receive the SoC money for 2006 we probably will put a bit of that money into getting swag and bribe all students to stay with us this year.
 * What will you do to ensure that your accepted students stick with the project after GSoC concludes?
