--- a/0-/GSoC:2008/Mentor Application.mediawiki
+++ b/0-/GSoC:2008/Mentor Application.mediawiki
@@ -4,7 +4,7 @@
 * What is your Organization's Homepage?
 ** http://xmms2.xmms.se/
 * Describe your organization.
-** XMMS2 is the spiritual successor to the very successful XMMS project. The creators of XMMS got together in 2002 and spun out the XMMS2 sister project that is now lead by Tobias RundstrÃ¶m and Anders Gustafsson with around 10-15 regular contributors spread over the world (but concentrated in Europe). Our focus has been to separate music playback from the UI in order to provide multiple interfaces and other interesting features. While the code of the music playback engine is starting to mature we have also added features that are expected from modern music players, like a Media library and a powerful way of querying it (Collections).
+** XMMS2 is the spiritual successor to the very successful XMMS project. The creators of XMMS got together in 2002 and spun out the XMMS2 sister project that is now lead by Tobias RundstrÃ¶m and Anders Waldenborg with around 10-15 regular contributors spread over the world (but concentrated in Europe). Our focus has been to separate music playback from the UI in order to provide multiple interfaces and other interesting features. While the code of the music playback engine is starting to mature we have also added features that are expected from modern music players, like a Media library and a powerful way of querying it (Collections).
 * Why is your organization applying to participate in GSoC 2008? What do you hope to gain by participating?
 ** First, we hope to be able to reward students in our community by providing them with an occasion to work on XMMS2 as their summer job, rather than beside it. In addition we hope to involve new people and more regular contributors in our project. Our exposure in the program last year also gave our organization great PR that we hope to mimic this year.
 * Did your organization participate in previous GSoC years? If so, please summarize your involvement and the successes and failures of your student projects. (optional)
