--- a/0-/GSoC:2008/Mentor Application.mediawiki
+++ b/0-/GSoC:2008/Mentor Application.mediawiki
@@ -20,6 +20,7 @@
 ** [irc://chat.freenode.net/xmms2 #xmms2] on freenode.net
 * Does your organization have an application template you would like to see students use? If so, please provide it now. (optional)
 * Who will be your backup organization administrator? Please enter their Google Account address. We will email them to confirm, your organization will not become active until they respond. (optional)
+** Anders Waldenborg, Google account: andersg@0x63.nu
 
 == About Your Mentors ==
 * What criteria did you use to select these individuals as mentors? Please be as specific as possible.
