--- a/0-/GSoC:2008/Mentor Application.mediawiki
+++ b/0-/GSoC:2008/Mentor Application.mediawiki
@@ -24,8 +24,13 @@
 
 == About Your Mentors ==
 * What criteria did you use to select these individuals as mentors? Please be as specific as possible.
+** All mentors are persons that has been contributing the project for a long time, most have mentored Google Summer of Code projects previous years.
 * Who will your mentors be? Please enter their Google Account address separated by commas. If your organization is accepted we will email each mentor to invite them to take part. (optional)
-** HEY WE NEED TO DECIDE THAT!
+** Tobias I guess?
+** Anders Waldenborg
+** Theefer
+** <If you feel like doing some GSoC mentoring enter your name here>
+** <If you feel like doing some GSoC mentoring enter your name here>
 
 == About The Program ==
 * What is your plan for dealing with disappearing students?
