--- a/0-/GSoC:2008/Mentor Application.mediawiki
+++ b/0-/GSoC:2008/Mentor Application.mediawiki
@@ -28,15 +28,17 @@
 * Who will your mentors be? Please enter their Google Account address separated by commas. If your organization is accepted we will email each mentor to invite them to take part. (optional)
 ** Tobias RundstrÃ¶m
 ** Anders Waldenborg, andersg@0x63.nu
-** Theefer
+** Theefer, theefer@gmail.com
 ** Daniel Svensson
 ** <If you feel like doing some GSoC mentoring enter your name here>
 ** Commaseparated list of google account addresses: xmmstru@gmail.com, andersg@0x63.nu, dsvensson@gmail.com
 
 == About The Program ==
 * What is your plan for dealing with disappearing students?
+** We are still working on our remote, solar-powered deadly nanobot-driven amphibian anaconda as a friendly encouragement for students to not drop their project. In the meantime, we will focus on choosing the right students in the first place. This means an extensive chat with all the serious candidates, to try to determine how available, reliable and honest they are. We will also ask a detailed project/work history (FOSS or not), to check whether the student has already proven to be cabable of completing a project. During the GSoC, the mandatory IRC presence and status reports will help us keep track of people's work and involvement.
 * What is your plan for dealing with disappearing mentors?
 ** Knowing the mentors very well, we don't expect this to happen. If anything unexpected were to happen anyway, we would always have one or two backup mentors for each project. Last year, some mentors were on holiday for a few weeks but other mentors were able to step in smoothly.
 * What steps will you take to encourage students to interact with your project's community before, during and after the program?
 ** Hanging around on IRC will be a requirement, we will see non-IRCing as desertion. We will show our patented kindness and interest in the students work and persona.
 * What will you do to ensure that your accepted students stick with the project after GSoC concludes?
+** We do not think it's possible to convince students to stick with the project unless they are interested in it in the first place. For this reason, we want to favorise the candidature of students who show a genuine interest in XMMS2, not just in a single GSoC task: (1) students who are already regular contributors and members of the community and who have a contribution to make in the context of GSoC, and (2) students who convince us of their unlimited passion for XMMS2 in their application form (among other things, we ask "why are you interested in XMMS2, what do you think you could bring to it, and what are the things you can think of to make XMMS2 an even better project?"). Obviously, a friendly community and lots of communication also help keeping good students during and after GSoC.
