/* About The Program */
Levitation import of page 2432 rev 8124 (minor).

--- a/0-/GSoC:2008/Mentor Application.mediawiki
+++ b/0-/GSoC:2008/Mentor Application.mediawiki
@@ -35,7 +35,7 @@
 
 == About The Program ==
 * What is your plan for dealing with disappearing students?
-** We are still working on our remote, solar-powered deadly nanobot-driven amphibian anaconda as a friendly encouragement for students to not drop their project. In the meantime, we will focus on choosing the right students in the first place. This means an extensive chat with all the serious candidates, to try to determine how available, reliable and honest they are. We will also ask a detailed project/work history (FOSS or not), to check whether the student has already proven to be cabable of completing a project. During the GSoC, the mandatory IRC presence and status reports will help us keep track of people's work and involvement.
+** We are still working on our remote, solar-powered deadly nanobot-driven amphibian anaconda as a friendly encouragement for students to not drop their project. In the meantime, we will focus on choosing the right students in the first place. This means an extensive chat with all the serious candidates, to try to determine how available, reliable and honest they are. We will also ask a detailed project/work history (FOSS or not), to check whether the student has already proven to be capable of completing a project. During the GSoC, the mandatory IRC presence and status reports will help us keep track of people's work and involvement.
 * What is your plan for dealing with disappearing mentors?
 ** Knowing the mentors very well, we don't expect this to happen. If anything unexpected were to happen anyway, we would always have one or two backup mentors for each project. Last year, some mentors were on holiday for a few weeks but other mentors were able to step in smoothly.
 * What steps will you take to encourage students to interact with your project's community before, during and after the program?
