--- a/0-/GSoC:2008/Mentor Application.mediawiki
+++ b/0-/GSoC:2008/Mentor Application.mediawiki
@@ -26,13 +26,13 @@
 * What criteria did you use to select these individuals as mentors? Please be as specific as possible.
 ** All mentors are persons that has been contributing the project for a long time, most have mentored Google Summer of Code projects previous years.
 * Who will your mentors be? Please enter their Google Account address separated by commas. If your organization is accepted we will email each mentor to invite them to take part. (optional)
-** Tobias RundstrÃ¶m
+** Tobias RundstrÃ¶m, xmmstru@gmail.com
 ** Anders Waldenborg, andersg@0x63.nu
 ** SÃ©bastien Cevey, theefer@gmail.com
-** Daniel Svensson
+** Daniel Svensson, dsvensson@gmail.com
 ** Alexander Botero-Lowry
 ** <If you feel like doing some GSoC mentoring enter your name here>
-** Commaseparated list of google account addresses: xmmstru@gmail.com, andersg@0x63.nu, dsvensson@gmail.com
+** Commaseparated list of google account addresses: xmmstru@gmail.com, andersg@0x63.nu, theefer@gmail.com, dsvensson@gmail.com
 
 == About The Program ==
 * What is your plan for dealing with disappearing students?
