Fix and complete descriptions
Levitation import of page 2427 rev 8131.

--- a/0-/GSoC:2008/Proposed projects.mediawiki
+++ b/0-/GSoC:2008/Proposed projects.mediawiki
@@ -1,23 +1,25 @@
+The following ideas are hints at possible projects that we would like to see in XMMS2. We also welcome new ideas warmly, so please feel free to suggest your own! If you are interested in working on GSoC 2008 with us, please drop by the IRC channel to ask any questions or details, we'd be glad to discuss the projects with you before you even start writing your proposal!
+
 {{SoCItem| title=Your idea
-|description=This is where you get the chance to implement that really cool music-player related idea that has been brewing in your mind. It may be some funny interface, a crazy effect, a revolutionary way to handle collections, or something different.
+|description=This is where you get the chance to implement that really cool music-player related idea that has been brewing in your mind. It may be some funny interface, a crazy effect, a revolutionary way to handle collections, or something different. Surprise us! We love new ideas!
 |lang=Depends
 |level=Depends
 |mentor=Depends}}
 
 {{SoCItem| title=[[Generated IPC | Auto-generated API and bindings]]| description=Currently, the C client library and the bindings (Python, Ruby, etc) have to be manually updated whenever a new function is introduced on the server. This work is tedious and mechanical, and the whole client API could in fact be automatically generated from a high-level description of the functions. The goal is therefore to determine the semantics of these descriptions (possibly using XML), and then use them to generate the different API source files. There is already some proof of concept.| lang=Python / XML| level=Advanced| mentor=N/A}}
 
-{{SoCItem| title=Media Library Database Backend (S4)| description=XMMS2 uses sqlite as the backend for its media library. Since XMMS2 basically maps a key-value pairing,   it has been aruged that using an sql database in this case is suboptimal. This project would be to take advantage of the abstraction provided by Collections, and look into implementing other backends for the XMMS2 media library. This project would include performance testing of the various potential databases.| lang=C| level=Hard| mentor=N/A}}
+{{SoCItem| title=New Media Library Database Backend (S4)| description=XMMS2 uses SQLite as the backend for its media library. Since XMMS2 basically maps a key-value pairing,   it has been argued that using an SQL database in this case is suboptimal, especially with regards to some SQLite limitations. In this project, the student have to take advantage of the abstraction provided by Collections, and look into implementing a new backend for the XMMS2 media library. This project would include performance testing to showcase the differences with the current backend in various contexts of use.| lang=C| level=Hard| mentor=N/A}}
 
-{{SoCItem| title=XMMS2-specific GUI toolkit widgets (gtk or qt)| description=XMMS2 clients developed for gtk or qt often implement the same widgets for displaying playlists, media status, and the media library. This project would be to implement a set of widgets for developing an xmms2 client for one of the popular toolkits. The study of existing music players and interest in HCI would be required. Advanced examples include: a rich medialib display (scriptable, see [http://www.foobar2000.org/ foobar2000]), a graphical editor for [[Collections_Concept | Collections]], cover art manager, preferences panel for changing configvals, etc.| lang=probably C or C++| level=Medium to Hard| mentor=N/A}}
+{{SoCItem| title=XMMS2-specific GUI toolkit widgets (GTK+ or Qt)| description=XMMS2 clients developed for GTK+ or Qt often implement the same widgets for displaying playlists, media status, and the media library. This project would be to implement a set of widgets for developing an xmms2 client with one of the popular toolkits. The study of existing music players and an interest in HCI would be required. Advanced examples include: a rich medialib display (scriptable, see [http://www.foobar2000.org/ foobar2000]), a graphical editor for [[Collections_Concept | Collections]], cover art manager, preferences panel for changing configvals, etc.| lang=probably C or C++| level=Medium to Hard| mentor=N/A}}
 
 {{SoCItem| title=Effect chain clean-up and crossfade plugin| description=Description pending| lang=C| level=Medium| mentor=N/A}}
 
 {{SoCItem| title=Collections 2.0| description=Description pending| lang=C| level=Medium| mentor=N/A}}
 
-{{SoCItem| title=Multiple channel support| description=New formats like AC3 and DTS supports multiple channels. XMMS2 is kind of prepared for this but without any decent support in the output plugins. The task will be to get full multiple channel support in XMMS2 for the pulseaudio, alsa and oss output (bonus if coreaudio also supports it!)| lang=C| level=Medium to hard| mentor=N/A}}
+{{SoCItem| title=Multiple channel support| description=New formats like AC3 and DTS supports multiple channels. XMMS2 is technically prepared for this but without any decent support in the output plugins. The task will be to get full multiple channel support in XMMS2 for the PulseAudio, alsa and oss output (bonus if CoreAudio also supports it!)| lang=C| level=Medium to Hard| mentor=N/A}}
 
-{{SoCItem| title=xmmsclient-easy| description=Development of a higher-level client library, that would include features many clients have in common. Currently planned modules include server state caching (playlist, metadata, playback status, etc), a new modular collection pattern parser, etc.| lang=C| level=Medium to Hard| mentor=N/A}}
+{{SoCItem| title=High-level clientlib (xmmsclient-easy)| description=Development of a higher-level client library, that would include features many clients have in common. Current ideas for xmmsclient-easy modules include: server state caching (playlist, metadata, playback status, etc), a new modular collection pattern parser, etc.| lang=C| level=Medium to Hard| mentor=N/A}}
 
-{{SoCItem| title=nycli| description=Finishing the development of the new official CLI, started by [[SÃ©bastien_Cevey | theefer]]. The base code is ready, but all commands and options must be added, along with configuration file support, advanced search pattern, etc.| lang=C| level=Medium| mentor=N/A}}
+{{SoCItem| title=nycli| description=Finish the development of the new official CLI, started by [[SÃ©bastien_Cevey | theefer]]. Nycli aims at providing a very powerful command-line interface, and new ideas are always welcome! The base code is ready (see the 'nycli' branch in [http://git.xmms.se/?p=xmms2-theefer.git;a=summary theefer's tree]), but not all commands are yet implemented, options must be added, along with configuration file support, advanced search pattern, etc.| lang=C| level=Medium| mentor=N/A}}
 
 {{SoCItem| title=New service clients| description=Development of multiple service clients, to be discussed. Random ideas: bookmark, lyrics, stop-after, alarm, party-shuffle, medialib-updater, metadata write-back, last.fm, etc. Note that this task assumes that Service Clients have been merged.| lang=To be discussed| level=Easy to Medium| mentor=N/A}}
