--- a/0-/GSoC:2008/Proposed projects.mediawiki
+++ b/0-/GSoC:2008/Proposed projects.mediawiki
@@ -20,6 +20,6 @@ The following ideas are hints at possible projects that we would like to see in 
 
 {{SoCItem| title=High-level clientlib (xmmsclient-easy)| description=Development of a higher-level client library, that would include features many clients have in common. Current ideas for xmmsclient-easy modules include: server state caching (playlist, metadata, playback status, etc), a new modular collection pattern parser, etc.| lang=C| level=Medium to Hard| mentor=N/A}}
 
-{{SoCItem| title=nycli| description=Finish the development of the new official CLI, started by [[SÃ©bastien_Cevey | theefer]]. Nycli aims at providing a very powerful command-line interface, and new ideas are always welcome! The base code is ready (see the 'nycli' branch in [http://git.xmms.se/?p=xmms2-theefer.git;a=summary theefer's tree]), but not all commands are yet implemented, options must be added, along with configuration file support, advanced search pattern, etc.| lang=C| level=Medium| mentor=N/A}}
+{{SoCItem| title=New command-line interface (nycli)| description=Finish the development of the new official CLI, started by [[SÃ©bastien_Cevey | theefer]]. Nycli aims at providing a very powerful command-line interface, and new ideas are always welcome! The base code is ready (see the 'nycli' branch in [http://git.xmms.se/?p=xmms2-theefer.git;a=summary theefer's tree]), but not all commands are yet implemented, options must be added, along with configuration file support, advanced search pattern, etc.| lang=C| level=Medium| mentor=N/A}}
 
 {{SoCItem| title=New service clients| description=Development of multiple service clients, to be discussed. Random ideas: bookmark, lyrics, stop-after, alarm, party-shuffle, medialib-updater, metadata write-back, last.fm, etc. Note that this task assumes that Service Clients have been merged.| lang=To be discussed| level=Easy to Medium| mentor=N/A}}
