Levitation import of page 2427 rev 8137.

--- a/0-/GSoC:2008/Proposed projects.mediawiki
+++ b/0-/GSoC:2008/Proposed projects.mediawiki
@@ -12,7 +12,7 @@ The following ideas are hints at possible projects that we would like to see in 
 
 {{SoCItem| title=XMMS2-specific GUI toolkit widgets (GTK+ or Qt)| description=XMMS2 clients developed for GTK+ or Qt often implement the same widgets for displaying playlists, media status, and the media library. This project would be to implement a set of widgets for developing an xmms2 client with one of the popular toolkits. The study of existing music players and an interest in HCI would be required. Advanced examples include: a rich medialib display (scriptable, see [http://www.foobar2000.org/ foobar2000]), a graphical editor for [[Collections_Concept | Collections]], cover art manager, preferences panel for changing configvals, etc.| lang=probably C or C++| level=Medium to Hard| mentor=N/A}}
 
-{{SoCItem| title=Effect chain clean-up and crossfade plugin| description=Description pending| lang=C| level=Medium| mentor=N/A}}
+{{SoCItem| title=Effect chain clean-up and crossfade plugin| description=One of the most requested features is a cross-fade plugin. Right now cross-fade is not possible since effects (and all xform elements) are re-created for each song. Also the interface for enable and manage effect xforms is very clumsy. This SoC task is divided in three tasks. 1) create persistent xforms 2) revisit the effect configuration and 3) create a crossfade plugin.| lang=C| level=Medium| mentor=N/A}}
 
 {{SoCItem| title=Collections 2.0| description=[[Collections_Concept | Collections]] have been merged and are now widely used as the query mechanism for our media library. However, the current implementation has its limitations and lacks some commands to allow full access to medialib information. In this project, the student would extend Collections features to support the following features (and possibly others): support for medialists in the DAG (add ordering and order-aware operators), new query functions (list all property keys for a media, list all values for a property, get N random media for a collection), aggregate functions for querying (e.g. count, average), new operators or namespace to match status-dependent media (e.g. current track, playlist context, etc), handle sources properly (select right value according to source preferences), use functions as select or matching fields (e.g. "match all media where lastplayed > NOW() - 1WEEK").| lang=C| level=Medium| mentor=N/A}}
 
